--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-ES">
 <head>
   <title>Instagram</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="blue"></div>
+  <div class="white">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="section phones">
+      <img src="images/phones.png" alt="Phones">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="section content">
 
-  Oh yeah, did we mention it's free?
+      <section>
+        <img src="images/brand.png" alt="Instagram logo">
+        <button class="btn"><img src="images/home.png" alt="Log In"> Log in</button>
+      </section>
 
-  Download on the App Store
-  Get it on Google Play
+      <section class="moments">
+        <h2>Capture and Share <br>the World's Moments</h2>
+        <p>
+          Instagram is a <b>fast</b>, <b>beautiful</b> and
+          <b>fun</b> way to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even share
+          to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <section class="downloads">
+        <img src="images/badge-iphone.png" alt="iphone">
+        <img src="images/badge-android.png" alt="android">
+      </section>
+    </div>
+  </div>
 
-  &copy; 2014 Instagram
+  <div>
+  <footer>
+      <ul>
+        <li><a href="#">ABOUT US</a></li>
+        <li><a href="#">SUPPORT</a></li>
+        <li><a href="#">BLOG</a></li>
+        <li><a href="#">PRESS</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">JOBS</a></li>
+        <li><a href="#">PRIVACY</a></li>
+        <li><a href="#">TERMS</a></li>
+        <li class="copyright">&copy; 2014 INSTAGRAM</li>
+      </ul>
+  </footer>
+  </div>
+
 </body>
 </html>
