--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <meta charset="UTF-8">
+  <title>Spotify</title>
 </head>
 <body>
-  Instagram
+Premium Discover Help Download
 
-  Capture and Share the World's Moments
+Music for everyone.
+Spotify is now free on mobile, tablet and computer.
+Listen to the right music, wherever you are.
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+What’s on Spotify?
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+Millions of Songs
+There are millions of
+songs on Spotify
 
-  Oh yeah, did we mention it's free?
+HD Music
+Listen to music as if you
+were listening live
 
-  Download on the App Store
-  Get it on Google Play
+Stream Everywhere
+Stream music on your
+smartphone, tablet or
+computer
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+It’s as yeezy as Kanye West.
+Search
+Know what you want to listen to?
+Just search and hit play.
+Browse
+Check out the latest charts,
+brand new releases and great
+playlists for right now.
+Discover
+Enjoy new music every Monday
+with your own personal playlist.
+Or sit back and enjoy Radio.
 </body>
 </html>
