--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,42 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Spotify</title>
+  <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+  <script src="https://use.fontawesome.com/a79a49a453.js"></script>
 </head>
 <body>
-Premium Discover Help Download
+  <div class="blue-background">
+    <div class="flex-container">
+      <div class="large-phones flex-item2">
+        <img src="images/phones.png" alt="Large Phone Picture" id="large-phones">
+      </div>
+      <div class="flex-item1">
+          <div class="logo-header">
+            <img src="images/brand.png" alt="instagram logo">
+            <button class="button blue-btn"><i class="fa fa-home" aria-hidden="true"></i>
+ Log In</button>
+          </div>
+         <div class="main-text">
+           <h1>Capture and Share the World's Moments</h1>
+           <p>Instagram is a fast, beautiful and fun way to share your life with friends and family. </p>
+           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+                it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+           <p>Oh yeah, did we mention it's free?</p>
+           <div class="store-apps">
+             <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store" id="appStore"></a>
+             <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play" id="playStore"></a>
+           </div>
+         </div>
+        </div>
 
-Music for everyone.
-Spotify is now free on mobile, tablet and computer.
-Listen to the right music, wherever you are.
-
-What’s on Spotify?
-
-Millions of Songs
-There are millions of
-songs on Spotify
-
-HD Music
-Listen to music as if you
-were listening live
-
-Stream Everywhere
-Stream music on your
-smartphone, tablet or
-computer
-
-It’s as yeezy as Kanye West.
-Search
-Know what you want to listen to?
-Just search and hit play.
-Browse
-Check out the latest charts,
-brand new releases and great
-playlists for right now.
-Discover
-Enjoy new music every Monday
-with your own personal playlist.
-Or sit back and enjoy Radio.
+    </div>
+      <footer class="footer">
+        <ul class="footer-list">
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li id="copyright">&copy; 2014 Instagram</li>
+        </ul>
+      </footer>
+  </div>
 </body>
 </html>
