final commit. made small changes to the positioning and added links

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -40,14 +40,14 @@
 
   <nav class="footer-nav">
     <ul class="navigation">
-      <li>About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
       <li>&copy; 2014 Instagram</li>
     </ul>
   </nav>
