--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Helvetica+Neue:300,600" rel="stylesheet">
+    <title>Instagram</title>
+  </head>
 <body>
-  Instagram
+  <main class="containerTotal">
+    <section class="blueHeader">
+      <img class="tittleInstagram" src="images/brand.png"/>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="loginButton">
+      <span class="loginInHome"><img src="images/home.png"> Log in</span>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+    </section>
+    <section class="phonesImage">
+      <img src="images/phones.png"/>
+    </section>
+    <section class="mainTextImage">
 
-  Download on the App Store
-  Get it on Google Play
+      <img class="backgroundImage" src="images/frame.png"/>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <h1>Capture and Share<br/>the World's Moments</h1>
+      <div class="textCentralInstagram"
+      <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  &copy; 2014 Instagram
-</body>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+      <p>Oh yeah, did we mention it's free?</p>
+
+    </div>
+          <span class="badgesImage"><img src="images/badge-iphone.png"/><img src="images/badge-android.png"/></span>
+
+    </section>
+    <footer>
+      <ul>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li>&copy; 2014 INSTAGRAM</li>
+      </ul>
+     </footer>
+
+    </main>
+
+  </body>
 </html>
