MAD Pablo Fuentes

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css"type="text/css">
 </head>
 <body>
-  Instagram
+<div id="up" >
 
-  Capture and Share the World's Moments
+</div>
+<div id="down">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div id="first" >
 
-  Oh yeah, did we mention it's free?
+<div id="movile">
+dgshetj
+</div>
+<div id="principal">
+<div id="header">
+<img src="images/brand.png">
 
-  Download on the App Store
-  Get it on Google Play
+</div>
+<div id="text">
+<h2 align="center">  Capture and Share the World's Moments</h2>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  &copy; 2014 Instagram
+<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+<p>Oh yeah, did we mention it's free?</p>
+</div>
+<div id="android">
+</div>
+<div id="apple"></div>
+</div>
+</div>
+</div>
+<div id="data">
+
+</div>
+<footer>
+
 </body>
 </html>
