instagram clone done

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,65 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet"  href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="fondo">
 
-  Oh yeah, did we mention it's free?
+    </div>
+    <div class="container">
+      <div class="iphone">
+        <img src="./images/phones.png">
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="whiteBox">
 
-  &copy; 2014 Instagram
+        <div>
+          <img src="./images/brand.png">
+          <button><img src="./images/home.png" >Log in</button>
+        </div>
+        <div class="head">
+          <h2>Capture and Share the World's Moments<h2/>
+          <p>  Instagram is a <b>fast</b>,<b> beautiful</b> and <b>fun </b>way to share your life with friends and family. <br><br>
+
+               Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+                 <br><br>Oh yeah, did we mention it's free?
+
+          </p>
+        </div>
+        <div id="cleafix"></div>
+
+
+       <div class="badge">
+          <img src="./images/badge-iphone.png">
+          <img src="./images/badge-android.png">
+       </div>
+
+
+      </div>
+    </div>
+
+    <div class="footerLinks">
+      <ul class="nolist">
+
+        <li><a href="#">About us</li>
+        <li><a href="#">Support</li>
+        <li><a href="#">Blog</li>
+        <li><a href="#">Press</li>
+        <li><a href="#">API</li>
+        <li><a href="#">Jobs</li>
+        <li><a href="#">Privacy</li>
+        <li><a href="#">Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </div>
+
+
 </body>
 </html>
