--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -32,11 +32,11 @@
 
   <h3>Capture and Share<br> the World's Moments</h3>
 
-  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br></p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br></p>
 
-  Oh yeah, did we mention it's free?</p>
+  <p>Oh yeah, did we mention it's free?</p>
 
   <img src="./images/badge-iphone.png" alt="app">
   <img src="./images/badge-android.png" alt="google">
@@ -44,15 +44,17 @@
 </div>
 
 <footer>
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-  <span>&copy; 2014 Instagram</span>
+<ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li><span>&copy; 2014 Instagram</span></li>
+</ul>
 </footer>
 
 </body>
