Instagram a falta de varios detalles

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,70 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="mitad-superior">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div class="mitad-inferior">
 
-  Oh yeah, did we mention it's free?
+  <div class="columns-container">
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="bloque-izquierdo">
+      <img src="images/phones.png" alt="Iphones juntos">
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <div class="bloque-derecho">
 
-  &copy; 2014 Instagram
+      <div class="logo-container">
+        <div class="logo">
+            <img src="images/brand.png" alt="Logo Instagram">
+        </div>
+        <div class="login-button">
+            <img src="images/home.png" alt="Símbolo home">
+            <span class="log-in">Log in</span>
+        </div>
+      </div>
+
+      <div class="bloque-texto">
+        <h2>Capture and Share<br />the World's Moments</h2>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="logos-apps">
+          <img src="images/badge-iphone.png" alt="Descarga la aplicación en la App Store">
+          <img src="images/badge-android.png" alt="Descarga la aplicación en la Play Store">
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
+</div>
+
+
+<div class="footer">
+<nav>
+  <ul>
+    <li class="menu-inferior">About Us</li>
+    <li class="menu-inferior">Support</li>
+    <li class="menu-inferior">Blog</li>
+    <li class="menu-inferior">Press</li>
+    <li class="menu-inferior">API</li>
+    <li class="menu-inferior">Jobs</li>
+    <li class="menu-inferior">Privacy</li>
+    <li class="menu-inferior">Terms</li>
+    <li class="menu-inferior">&copy; 2014 Instagram</li>
+  </ul>
+</nav>
+</div>
 </body>
 </html>
