--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Instagram clone</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
+    </style>
+  </head>
+  <body>
+    <div id="header">
+      <div class="header-imgs">
+        <img src="brand.png" class="brand">
+        <div class="login">
+          <img src="home.png" class="home">
+          <h5>Log in</h5>
+        </div>
+      </div>
+    </div>
+    <div id="general">
+      <div class="content">
+        <div class="phones">
+          <img src="phones.png">
+        </div>
+        <div class="pitch">
+          <h3>Capture and share the world's moments</h3>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p> Take a picture or video, choose a filter to transform its look and feel,
+           then post to Instagram — it's that easy. You can even share to Facebook,
+           Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="badges">
+            <img src="badge-iphone.png" class="badge-iphone">
+            <img src="badge-android.png" class="badge-iphone">
+          </div>
+        </div>
+      </div
+    </div>
+    <footer>
+      <p>ABOUT US SUPPORT BLOG PRESS API JOBS PRIVACY TERMS © 2014 INSTAGRAM</p>
+    </footer>
+  </body>
 </html>
+
+
+
+
+
+
+
+<!--<p>
+  </p>-->
