used background images

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,8 +14,7 @@
       <div class="flex-item1">
           <div class="logo-header">
             <img src="images/brand.png" alt="instagram logo">
-            <button class="button blue-btn"><i class="fa fa-home" aria-hidden="true"></i>
- Log In</button>
+            <button class="button blue-btn"><img src="images/home.png" alt="Home Icon" class="home-icon"></i><span id="login">Log In<span></button>
           </div>
          <div class="main-text">
            <h1>Capture and Share the World's Moments</h1>
