--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <content>
+    <img src="images/phones.png" class="phones">
+    <section>
+      <header>
+        <img src="images/brand.png" class="brand">
+        <button>
+          <img src="images/home.png" class = "home">
+           Log in
+         </button>
+      </header>
+      <article>
+        <h1>Capture and Share<br>the World's Moments</h1>
+          <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        <a href=""><img src = "images/badge-iphone.png"></a>
+        <a href=""><img src = "images/badge-android.png"></a>
+      </arcticle>
+    </section>
+  </content>
+  <footer>
+    <a href="">About Us</a>
+    <a href="">Support</a>
+    <a href="">Blog</a>
+    <a href="">Press</a>
+    <a href="">API</a>
+    <a href="">Jobs</a>
+    <a href="">Privacy</a>
+    <a href="">Terms</a>
+    &copy; 2014 Instagram
+  </footer>
 </body>
 </html>
