--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+
+<link rel="stylesheet" href="css/main.css">
+
+
 </head>
 <body>
-  Instagram
+  <div class="generalcontainer">
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <img class="floatedelement"  src="images/phones.png" alt="">
+    <img class="brandlogo" width="250px"src="images/brand.png" alt="">
+      <button type="button" name="button"><img class="accueil"src="images/home.png" alt="">log in</button>
+<div class="image">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<img class="secondbackground"src="images/frame.png" alt="">
 
-  Oh yeah, did we mention it's free?
+<h2>Capture and Share the World's Moments</h2>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+    <br>You can even share to Facebook, Twitter, Tumblr and more.
+    <br>It's a new way to see the world.</p>
+  <p>Oh yeah, did we mention it's free?</p>
+  <br></br>
+  <div class="logo">
 
+<img src="images/badge-android.png" alt="">  <img src="images/badge-iphone.png" alt="">
+  </div>
+  <br>
+
+  <br>
   &copy; 2014 Instagram
+</div>
+
+  </div>
+  <div class="footer">
+      <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+  </ul>
+  </div>
 </body>
 </html>
