--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,59 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div id="main">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<!--LEFT SECTION-->
+  <div id="left">
+    <img src="images/phones.png" alt="Phones">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<!--RIGHT SECTION-->
+  <div id="right">
+   <div id="top-right">
+    <img src="images/brand.png" alt="Brand">
 
-  Oh yeah, did we mention it's free?
+    <div id="button">
 
-  Download on the App Store
-  Get it on Google Play
+      <img src="images/home.png" alt="Home">
+      <p>Log in</p>
+    </div>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <div id="content">
+      <h1>Capture and Share the World's Moments</h1>
 
-  &copy; 2014 Instagram
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+
+    <div id="badges">
+      <img src="images/badge-iphone.png" alt="Badge Iphone">
+      <img src="images/badge-android.png" alt="Badge Android">
+    </div>
+  </div>
+</div>
+</div>
+
+<!--FOOTER-->
+<div id="footer">
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li><span>&copy; 2014 Instagram</span></li>
+  </ul>
+
+
+</div>
 </body>
 </html>
