--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,42 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="/home/valentin/code/lab/lab-css-instagram-clone/starter-code/css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="iphone-position">
+    <img src="/home/valentin/code/lab/lab-css-instagram-clone/starter-code/images/phones.png" alt="phones">
+  </div>
+  <div class="position-title">
+    <img src="/home/valentin/code/lab/lab-css-instagram-clone/starter-code/images/brand.png" alt="insta">
+  </div>
+  <div class="container-content">
+    <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+    Instagram is a fast, beautiful and fun way to share your life
+     with friends and family.
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    Take a picture or video, choose a filter to transform its look<br />
+     and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    Oh yeah, did we mention it's free?
+  </div>
+//logo
+//logo
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer class="footer-bottom">
+      <ul>
+        <a href="#"><li>About Us</li></a>
+        <a href="#"><li>Support</li></a>
+        <a href="#"><li>Blog</li></a>
+        <a href="#"><li>Press</li></a>
+        <a href="#"><li>API</li></a>
+        <a href="#"><li>Jobs</li></a>
+        <a href="#"><li>Privacy</li></a>
+        <a href="#"><li>Terms</li></a>
+      </ul>
+    &copy; 2014 Instagram
+  </footer>
 </body>
 </html>
