--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
   <title>Instagram</title>
+  <link rel='stylesheet' href='css/main.css' type='text/css'>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class='background-container'>
+  </div>
+  <div class='page-container'>
+    <div class='columnA'>
+      <img src='images/phones.png' alt='phone photos'>
+    </div>
+    <div class='columnB'>
+      <div class='brand'>
+        <img src='images/brand.png' alt='brand logo'>
+        <div class='login-button'>
+          <img src='images/home.png' alt='home icon'>
+          <p id='login-text'>Login</p>
+        </div>
+      </div>
+      <div class='description-text'>
+        <h2>
+          Capture and Share the World's Moments
+        </h2>
+        <p>
+          Instagram is a <span class='bold'>fast, beautiful</span> and <span class='bold'>fun</span> way to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        <div class='appstore-photos'>
+          <img src='images/badge-iphone.png' alt='App store logo and link'>
+          <img src='images/badge-android.png' alt='Google play store logo and link'>
+        </div>
+      </div>
+  </div>
+</div>
+<div class='bottom-links'>
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
+</div>
 </body>
 </html>
