--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,10 +2,36 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
 </head>
 <body>
-  Instagram
 
+<div>
+  <img src="images/badge-android.png" alt="Android">
+</div>
+<div>
+  <img src="images/badge-iphone.png" alt="iPhones">
+</div>
+<div>
+  <img src="images/bgtile.png" alt="bgtile">
+</div>
+<div>
+  <img src="images/brand.png" alt="brand">
+</div>
+<div>
+  <img src="images/home.png" alt="home">
+</div>
+
+<div class="layout0">
+<div>
+  <img src="images/phones.png" alt="Phones">
+</div>
+<div>
+  <h1>Instagram</h1>
+</div>
+<div>
+<article>
   Capture and Share the World's Moments
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
@@ -13,19 +39,25 @@
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
-
+</article>
+</div>
   Download on the App Store
   Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+<footer>
+  <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  </ul>
+</footer>
+<div>&copy; 2014 Instagram</div>
+
 </body>
 </html>
