--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" type="text/css" href="css/main.css"
 <head>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <header></header>
+  <section>
+    <div class="container-header">
+      <img src="images/brand.png">
+      <div class="btn-home">
+        <img src="images/home.png">
+        <div class="btn-login">Log In</div>
+      </div>
+    </div>
+    <div class="phone-pictures">
+      <img src="images/phones.png">
+    </div>
+    <div class="container">
+      <h2>Capture and Share <br> the World's Moments</h2>
 
-  Capture and Share the World's Moments
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <p>Take a picture or video, choose a filter to transform its look and feel,
+      then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+      Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
+      <div class="download">
+        <img class="download-img" src="images/badge-iphone.png">
+        <img src="images/badge-android.png">
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+  </section>
+  <footer>
+    <ul class="footer-list">
+        <li class="list">About Us</li>
+        <li class="list">Support</li>
+        <li class="list">Blog</li>
+        <li class="list">Press</li>
+        <li class="list">API</li>
+        <li class="list">Jobs</li>
+        <li class="list">Privacy</li>
+        <li class="list">Terms</li>
+    </ul>
+    <span>&copy; 2014 Instagram</span>
+  </footer>
+
 </body>
 </html>
