--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="css/main.css">
 <head>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="full-wrap">
+    <div class="phones-image"><img src="images/phones.png"></div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="right-column-wrapper">
+      <div class="branding-wrapper">
+      <img class="brand" src="images/brand.png">
+        <button class="login-button"><img src="images/home.png">
+        <div class="login-text">Log in</div></button>
+    </div>
+      <div class="presentation-wrapper">
+        <h2 class="tagline">Capture and Share the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+        <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <img class="download-button" src="images/badge-iphone.png">
+      <img class="download-button" src="images/badge-android.png">
+      </div>
+
+    </div>
+</div>
+<footer class="footer">
+  <a href="link">About Us</a>
+  <a href="link">Support</a>
+  <a href="link">Blog</a>
+  <a href="link">Press</a>
+  <a href="link">API</a>
+  <a href="link">Jobs</a>
+  <a href="link">Privacy</a>
+  <a href="link">Terms</a>
 
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
