--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,43 +7,36 @@
 </head>
 <body>
 
-<div>
-  <img src="images/badge-android.png" alt="Android">
-</div>
-<div>
-  <img src="images/badge-iphone.png" alt="iPhones">
-</div>
-<div>
-  <img src="images/bgtile.png" alt="bgtile">
-</div>
-<div>
-  <img src="images/brand.png" alt="brand">
-</div>
-<div>
-  <img src="images/home.png" alt="home">
-</div>
 
 <div class="layout0">
-<div>
+  <div>
   <img src="images/phones.png" alt="Phones">
+  </div>
+<section>
+  <article class="layout1">
+    <img src="images/brand.png" alt="brand">
+    <img src="images/home.png" alt="home">
+  </article>>
+
+    <article class="artcleformat artstyle">
+      <h1>Capture and Share the World's Moments</h1>
+      <a>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+      Oh yeah, did we mention it's free?
+      Download on the App Store
+      Get it on Google Play
+      </a>
+    <div class="layout2 iaposition">
+      <img src="images/badge-iphone.png" alt="iPhones">
+      <img src="images/badge-android.png" alt="Android">
+    </div>
+    </article>
+
+</section>
+
 </div>
-<div>
-  <h1>Instagram</h1>
-</div>
-<div>
-<article>
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-</article>
-</div>
-  Download on the App Store
-  Get it on Google Play
-
 
 <footer>
   <ul>
