--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="header"></div>
+  <div class="container">
+    <div class="col-img">
+      <img src="/home/liuda/code/labs/lab-css-instagram-clone/starter-code/images/phones.png" alt="Phones' image">
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="col-info">
+      <header class="main-header">
+        <div class="col-half"><h1><img src="/home/liuda/code/labs/lab-css-instagram-clone/starter-code/images/brand.png" alt="Instagram"></h1>
+          </div>
+        <div class="col-half"><button type="button"><img src="/home/liuda/code/labs/lab-css-instagram-clone/starter-code/images/home.png" alt="Log in button"><span>Log in</span></button>
+          </div>
+        <div class="clear-fix"></div>
+      </header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <section class="info-frame">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <button type="button"><img src="/home/liuda/code/labs/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="Download on the App Store"></button>
+        <button type="button"><img src="/home/liuda/code/labs/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="Get it on Google Play"></button>
+      </section>
+    </div>
 
-  Oh yeah, did we mention it's free?
+    <div class="clear-fix"></div>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="footer">
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li><span class="copyright">&copy; 2014 Instagram</span></li>
+      </ul>
+      <div class="clear-fix"></div>
+    </footer>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
