--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,64 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <!-- LEFT HAND BLOCK, PHONE IMAGE  -->
+      <div class="phoneimg">
+        <img src="images/phones.png" class="phones" alt="phones image">
+      </div>
+  <!-- RIGHT HAND BLOCK, EVERYTHING DOWN TO FOOTER -->
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="rhs">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="header">
+      <img src="images/brand.png" alt="Instagram" class="logo">
 
-  Oh yeah, did we mention it's free?
+    <div class="login">
+      <img src="images/home.png" alt="login button">
+      <span id="login"><b>Log in</b></span>
+    </div>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+
+      <div class="frameimg">
+          <h2 class="title-text">Capture and Share <br>the World's Moments</h2>
+
+      <p id="first-p">Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.<p>
+
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+    </div>
+
+      <div class="download">
+        <img src="images/badge-iphone.png" alt="Download on the App Store" id="iphone">
+        <img src="images/badge-android.png" alt="Get it on Google Play">
+      </div>
+
+  </div>
+
+<!-- FOOTER BLOCK -->
+
+
+  <div class="footer">
+      <ul><b>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+
+        <li class="copyright">&copy; 2014 INSTAGRAM</li>
+      </b>
+      </ul>
+  </div>
+
 </body>
 </html>
