--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,43 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
-</html>
+  <div id="alpha">
+    <div class="phone"><img src="images/phones.png" alt="phones"></div>
+    <div class="main">
+      <header>
+        <h1 class="instaLogo"><img src="images/brand.png" alt="brand-Logo">
+          <div class= "button"><img src="images/home.png" alt="home">Log in</div>
+        </h1>
+      </header>
+      <aside>
+        <h1>Capture and Share <br>the World's Moments</h1>
+        <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+          <br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br>
+          Oh yeah, did we mention it's free?
+          <div class="store">
+            <img src="images/badge-iphone.png" alt="apple-Logo">
+            <img src="images/badge-android.png" alt="play-Logo">
+          </div>
+        </aside>
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li id="copy">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </body>
+  </html>
