--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,11 +10,13 @@
   </div>
   <div class="position-title">
     <img src="/home/valentin/code/lab/lab-css-instagram-clone/starter-code/images/brand.png" alt="insta">
+    <a href="#" class="login-button"><img src="/home/valentin/code/lab/lab-css-instagram-clone/starter-code/images/home.png" alt="house log in">
+Log in</a>
   </div>
   <div class="container-content">
     <h1>Capture and Share the World's Moments</h1>
 
-    Instagram is a fast, beautiful and fun way to share your life
+    Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life
      with friends and family.
 
     Take a picture or video, choose a filter to transform its look<br />
@@ -22,8 +24,10 @@
 
     Oh yeah, did we mention it's free?
   </div>
-//logo
-//logo
+  <div class="badge">
+    <img src="/home/valentin/code/lab/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="badge iphone">
+    <img src="/home/valentin/code/lab/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="badge android">
+  </div>
 
 
   <footer class="footer-bottom">
@@ -36,8 +40,8 @@
         <a href="#"><li>Jobs</li></a>
         <a href="#"><li>Privacy</li></a>
         <a href="#"><li>Terms</li></a>
+        &copy; 2014 Instagram
       </ul>
-    &copy; 2014 Instagram
   </footer>
 </body>
 </html>
