--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="iconsInstaLog">
+      <img src="images/brand.png" alt="iconinsta">
+      <div class="textLogin">Log in</div>
+      <div class="iconHome"><img src="images/home.png" alt="iconhome"></div>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div id="container">
+  <div class="phone">
+    <img src="images/phones.png" alt="imagephone">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="whiteCard">
+    <img src="images/frame.png" alt="imageframe">
+        <div class="baseLine"><p><br>Capture and Share<br>the World's Moments</p></div>
+        <div class="text">
+            <p>Instagram is a <span>fast</span>, <span>beautiful and fun</span> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="iconsAndroidIphone">
+            <img src="images/badge-iphone.png" alt="imageiphone">
+            <img class="iconAndroid" src="images/badge-android.png" alt="imageandroid">
+        </div>
+  </div>
+</div>
 
-  Oh yeah, did we mention it's free?
+<div class="liensFooter">
+    <div class="liste"><ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        </ul>
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="copyright"><p>@ 2014 Instagram</p></div>
+</div>
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
-</html>
+  </body>
+  </html>
