a bit of improvement but still quite ugly...

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,26 +7,26 @@
 </head>
 <body>
 
+<div class="layout0 mainlayoutposition">
 
-<div class="layout0">
-  <div>
+  <div class="phonesposition">
   <img src="images/phones.png" alt="Phones">
   </div>
+
 <section>
-  <article class="layout1">
+
+  <article class="layout1 instapos">
     <img src="images/brand.png" alt="brand">
     <img src="images/home.png" alt="home">
   </article>>
 
     <article class="artcleformat artstyle">
-      <h1>Capture and Share the World's Moments</h1>
-      <a>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <h1>Capture and Share<br> the World's Moments</h1>
+      <a>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br>
 
-      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
 
       Oh yeah, did we mention it's free?
-      Download on the App Store
-      Get it on Google Play
       </a>
     <div class="layout2 iaposition">
       <img src="images/badge-iphone.png" alt="iPhones">
@@ -52,5 +52,6 @@
 </footer>
 <div>&copy; 2014 Instagram</div>
 
-</body>
+</div>
+
 </html>
