--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+	<div class="header">
+		<!--This is empty-->
+	</div>
 
-  Capture and Share the World's Moments
+ 	<div class="main">
+ 		<div class="phones">
+ 			<img src="images/phones.png">
+ 		</div>
+    <div class="content">
+      <div class="head">
+        <img src="images/brand.png">
+        <div class="login-button">
+          <img src="images/home.png">
+          <p id="login-button">Login</p>
+        </div>
+    </div>
+ 		  <div class="text-container">
+ 			  <h2>Capture and Share the World's Moments!</h2> 
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+ 			  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+ 			  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <p>Oh yeah, did we mention it's free?</p>
+		  </div>
+		  <div class="store">
+  		  <img id="iphone" src="images/badge-iphone.png">
+ 			  <img id="google" src="images/badge-android.png">
+      </div>
+  	</div>
+</div>
+  	<div class="footer">
+      <ul>
+        <li>About Us</li>
+  		  <li>Support</li>
+  		  <li>Blog</li>
+  		  <li>Press</li>
+  		  <li>API</li>
+  		  <li>Jobs</li>
+  		  <li>Privacy</li>
+  		  <li>Terms</li>
+        <li id="copyright">&copy; 2014 Instagram</li>
+      </ul>
+  	</div>
 </body>
 </html>
