--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,8 +12,10 @@
 
 
     <img class="floatedelement"  src="images/phones.png" alt="">
-    <img class="brandlogo" width="250px"src="images/brand.png" alt="">
+    <div class="logoheader">
+      <img class="brandlogo" width="250px"src="images/brand.png" alt="">
       <button type="button" name="button"><img class="accueil"src="images/home.png" alt="">log in</button>
+</div>
 <div class="image">
 
 <img class="secondbackground"src="images/frame.png" alt="">
@@ -26,7 +28,7 @@
     <br>You can even share to Facebook, Twitter, Tumblr and more.
     <br>It's a new way to see the world.</p>
   <p>Oh yeah, did we mention it's free?</p>
-  <br></br>
+  <br>
   <div class="logo">
 
 <img src="images/badge-android.png" alt="">  <img src="images/badge-iphone.png" alt="">
