--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+    <title>Instagram</title>
+
+    <link rel="stylesheet" href="css/main.css">
+
 </head>
-<body>
-  Instagram
+  <body>
+    <div id="left">
+      <img src="images/phones.png" alt="Phones" width="170" height="280">
 
-  Capture and Share the World's Moments
+      <img src="images/brand.png" alt="Marque Instagram">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <img src="images/home.png" alt="home">
+    <div id="right">
+      <h1>Capture and Share the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+      <p>Take a picture or video, choose a filter to transform its look and feel,
+      then post to Instagram &mdash; it's that easy.
+      You can even share to Facebook, Twitter, Tumblr and more.
+      It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+    <p>Oh yeah, did we mention it's free?</p>
 
+    <img src="images/badge-iphone.png" alt="Download on Applestore">
+    <img src="images/badge-android.png" alt="Download on Google">
+  </div>
+
+<footer>
   About Us
   Support
   Blog
@@ -25,7 +38,7 @@
   Jobs
   Privacy
   Terms
-
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
