--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,56 +3,68 @@
 <head>
   <title>Instagram</title>
   <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
 
-    <div class="top-background">
+<div class="big-div">
+<div class="blue"></div>
+<div class="main-content">
+    <div class="phone-image">
+      <img src=images/phones.png>
     </div>
 
-    <div id="instagram-brand">
-        <img src="images/brand.png">
-    </div>
+    <div class="right-content">
 
-    <div id="login-button">
-        <h6>
-            Log in
-        </h6>
+      <div class="logo">
+        <img src=images/brand.png alt="logo">
+      </div>
 
-        <img src="images/home.png">
-    </div>
+      <div class="login">
+        <div class="login-content">
+        <img src="images/home.png" alt="">
+        <p>Log in</p>
+        </div>
+      </div>
 
-    <div class="phone">
-        <img src="images/phones.png">
-    </div>
+      <div class="text-content">
+        <h3>Capture and Share the World's Moments</h3>
+        <p>  Instagram is a fast, beautiful and fun way to share your life with friends and family. <br><br>
 
-    <div class="main-text">
-        <img src="images/frame.png" id="frame">
-        <h1>
-            Capture and Share <br> the World's Moments
-        </h1>
-        <p>
-            Instagram is a fast, beautiful and fun way to share your life with friends and family.
-            <br>
-            <br>
-            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-            <br>
-            <br>
-            Oh yeah, did we mention it's free?
-        </p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-        <img src="images/badge-android.png" id="badge-android">
-        <img src="images/badge-iphone.png" id="badge-iphone">
+          Oh yeah, did we mention it's free?</p>
+        <img src="images/badge-iphone.png" alt="iphone">
+        <img src="images/badge-android.png" alt="android">
+      </div>
+
 
     </div>
 
-    <div class="footer">
-        <span id="bottom-nav">
-            <b>About Us    Support    Blog    Press    API    Jobs    Privacy    Terms </b>
-        </span>
-        <span>
-            &copy; 2014 Instagram
-        </span>
-    </div>
+
+
+</div>
+
+</div>
+
+<div style="clear:both"></div>
+
+<div class="footer">
+  <ul>
+    <li> <a href="#">About Us</a></li>
+    <li> <a href="#">Support</a></li>
+    <li> <a href="#">Blog</a></li>
+    <li> <a href="#">Press</a></li>
+    <li> <a href="#">API</a></li>
+    <li> <a href="#">Jobs</a></li>
+    <li> <a href="#">Privacy</a></li>
+    <li> <a href="#">Terms</a></li>
+    <li class="copyright">&copy; 2014 Instagram</li>
+  </ul>
+
+</div>
+
+
 
 </body>
 </html>
