--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="wrap-center">
+      <div class="panel">
+          <!-- Phone image section -->
+          <section class="left">
+              <img src="images/phones.png" alt="iPhones" />
+          </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <!-- Texts and call-to-action section-->
+          <section class="right">
+            <img class="instagram-logo" src="images/brand.png" alt="Instagram" />
+              <div class="login">
+                  <img src="images/home.png" alt="Home icon" /><span class="login-text"><a href="#">Log in</a></span>
+              </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              <div class="call-to-action">
+                  <h1>Capture and Share<br> the World's Moments</h1>
+                  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+                  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                  <p>Oh yeah, did we mention it's free?</p>
+                  <img src="images/badge-iphone.png" class="btn" alt="Download on the App Store" />
+                  <img src="images/badge-android.png" class="btn" alt="Get it on Google Play" />
+              </div>
+          </section>
 
-  Oh yeah, did we mention it's free?
+          <!-- Tiled gradient background -->
+          <div class="tiled-blue"></div>
+      </div>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+  <footer>
+      <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li class="gray">&copy; 2014 Instagram</li>
+      </ul>
+  </footer>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
