--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <head>
+         <title>Instagram</title>
+         <link rel="stylesheet" type="text/css" href="css/main.css">
+    </head>
+    <body>
+        <div class="fondo-azul">
+        </div>
+        <div class="container">
+            <div class="phones-col-inline ">
+                <img src="images/phones.png">
+            </div>
+            <div class="instagram-panel-col-inline">
+                <div class="inline-blocks">
+                    <div class="instagram-logo">
+                        <img class="brand-img" src="images/brand.png">
+                    </div>
+                    <div class="btn-login">
+                        <img src="images/home.png">
+                        <a href="">Log in</a>
+                    </div>
+                </div>
+                <div class="description">
+                    <h2>Capture and Share the World's Moments</h2>
+                    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b>
+                        way to share your life with friends and family.
+                    </p>
+                    <p>Take a picture or video, choose a filter to transform its
+                        look and feel, then post to Instagram &mdash; it's that easy.
+                        You can even share to Facebook, Twitter, Tumblr and more.
+                        It's a new way to see the world.
+                    <p>Oh yeah, did we mention it's free?</p>
+                </div>
+                <div>
+                    <ul class="badges-ul">
+                        <li class="badges-li"><a href="#"><img src="images/badge-iphone.png"></a>
+                        <li class="badges-li"><a href="#"><img src="images/badge-android.png"></a>
+                    </ul>
+                </div>
+            </div>
+            <footer class="footer">
+                <ul class="footer-ul">
+                    <li class="footer-li">About Us</li>
+                    <li class="footer-li">Support</li>
+                    <li class="footer-li">Blog</li>
+                    <li class="footer-li">Press</li>
+                    <li class="footer-li">API</li>
+                    <li class="footer-li">Jobs</li>
+                    <li class="footer-li">Privacy</li>
+                    <li class="footer-li">Terms</li>
+                    <li class="footer-li copyright">&copy; 2014 Instagram</li>
+                </ul>
+            </footer>
+        </div>
+        </div>
+    </body>
 </html>
